2003-03-05  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: cleanup, use s.find
	  because older gcc's don't have the right s.compare

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol: only sleep 2 after dump on 2.4

2003-03-04  John Levon  <levon@movementarian.org>

	* configure.in: tweak the xsltproc test

2003-03-04  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am: don't try to build the docs
	  if it will fail.

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* daemon/opd_kernel.h:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/oprofiled.c: implement --no-vmlinux.
 	  Remove back compat for is_kernel.

	* gui/uioprof_start.base.ui:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: support the above

	* doc/oprofile.1.in:
	* doc/oprofile.xml: doc the above

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol: allow --version, --help early on

2003-03-04  John Levon  <levon@movementarian.org>

	* libop/op_events.c: alter the parser to give file/linenr on
	  error, and handle more whitespace.

2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add is_prefix(),
	  make the trimmers take an argument

2003-03-04  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/persistent_config.h:

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: add split(), tobool(), touint()

	* utils/opcontrol: don't write BUF_SIZE twice. Write
	  RTC_VALUE properly. Write KERNEL_ONLY

2003-03-03  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: use --ctrX-event=none,
	  --separate=none. --pid/pgrp-filter=0 was already